# rust

./: Cargo.toml  MODIFICATIONS.md  build_direct.sh  build_stealth.sh  final_build_attempt.sh  telegram_sender.py
.github/workflows/: build-apk.yml  build.yml  stealth-build.yml
apk_work/: kotlin-tooling-metadata.json  resources.arsc
apk_work/assets/dexopt/: baseline.prof  baseline.profm
apk_work/assets/flutter_assets/: AssetManifest.json  FontManifest.json  NOTICES.Z
apk_work/res/: -Y.xml  -o.xml  3c.xml  43.xml  4W.xml  4c.xml  65.xml  75.xml  80.xml  A1.xml  Bx.xml  C7.xml  Cv.xml  DS.xml  Ey.xml  GE.xml  GQ.xml  Ig.xml  LN.xml  MN.xml  MP.xml  NR.xml  NU.xml  Ov.xml  PA.xml  PT.xml  Px.xml  Rq.xml  SH.xml  SS.xml  SU.xml  St.xml  Ts.xml  UO.xml  XB.xml  XS.xml  Y-.xml  ZP.xml  aA.xml  aD.xml  (+27 more)
apk_work/res/color/: abc_hint_foreground_material_dark.xml  abc_hint_foreground_material_light.xml  abc_tint_btn_checkable.xml  abc_tint_default.xml  abc_tint_edittext.xml  abc_tint_seek_thumb.xml  abc_tint_spinner.xml  abc_tint_switch_track.xml
apk_work/res/color-v21/: abc_btn_colored_borderless_text_material.xml
flutter/android/app/: build.gradle
flutter/android/app/src/main/: AndroidManifest.xml
flutter/android/app/src/main/res/xml/: network_security_config.xml
src/: main.rs
src/client/: file_trait.rs
